# opencode_runner

./: Cargo.toml  README.md  plan.md
.github/workflows/: ci.yml
.opencode/agents/: gsd-codebase-mapper.md  gsd-executor.md  gsd-integration-checker.md  gsd-phase-researcher.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-core-infrastructure/: 01-core-infrastructure-VERIFICATION.md  01-core-infrastructure-core-setup-PLAN.md  01-core-infrastructure-core-setup-SUMMARY.md  02-core-infrastructure-configuration-PLAN.md  02-core-infrastructure-configuration-SUMMARY.md  03-core-infrastructure-testing-PLAN.md  04-core-infrastructure-gap-closure-PLAN.md  04-core-infrastructure-gap-closure-SUMMARY.md  05-core-infrastructure-gap-closure-PLAN.md  05-core-infrastructure-gap-closure-SUMMARY.md
.planning/phases/01-specification-audit/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-04-PLAN.md  01-05-PLAN.md  01-RESEARCH.md
src/: client.rs  config.rs  control_loop.rs  environment.rs  lib.rs  main.rs  opencode_stub.rs  reviewer.rs  sampler.rs  server.rs  state.rs
src/tui/: mod.rs
tests/: integration_test.rs  reviewer_test.rs  sampler_test.rs  test_import_test.rs
