[package]
name = "opencode_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
opencode_rs = "0.1"

# HTTP client for reviewer
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# TUI (optional)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
portpicker = "0.1"
tokio-util = "0.7"

[features]
default = ["tui"]
tui = ["ratatui", "crossterm"]
